cabal-version:       2.2
name:                json-rpc-types
version:             0.2.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Leonid Onokhov
maintainer:          sopvop@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Network.JsonRpc.Errors
                 , Network.JsonRpc.Server
                 , Network.JsonRpc.Types
  other-extensions: BangPatterns
                  , GeneralizedNewtypeDeriving
                  , OverloadedStrings
  build-depends: base                 >= 4.11.0.0 && < 5
               , aeson                >= 1.4.2.0 && < 1.6
               , hashable             >= 1.2.7.0 && < 1.4
               , text                 ^>= 1.2.3.1
               , bytestring           ^>= 0.10.8.2
               , unordered-containers ^>= 0.2.9.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -funbox-strict-fields -fno-warn-name-shadowing
