cabal-version:      3.4
name:               json-rpc-types
version:            0.4.0.0

-- synopsis:
-- description:
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Leonid Onokhov
maintainer:         sopvop@gmail.com

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Network.JsonRpc.Errors
    Network.JsonRpc.Server
    Network.JsonRpc.Types

  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings

  build-depends:
    , aeson                 >=2.1     && <2.3
    , base                  >=4.18    && <5
    , bytestring            >=0.11.5  && <0.13
    , hashable              >=1.4.4.0 && <1.5
    , text                  >=2.0.2   && <2.1
    , unordered-containers  ^>=0.2.20

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -funbox-strict-fields -Wall -Wcompat -Widentities
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Wnoncanonical-monad-instances
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Wunused-packages
